macros/with_di_scope/tests/ui/non_async_fn.stderr
error: The 'with_di_scope' macro can only be applied to async functions.
 --> tests/ui/non_async_fn.rs
  |
  | fn sync_function() {
  | ^^
